--- a/public/main.css
+++ b/public/main.css
@@ -4,9 +4,11 @@ body {
 
 #keyboard {
     display: grid;
-    border: 1px solid red;
     gap: .25em;
+    
+    background-color: rgb(223, 223, 223);
     padding: .25em;
+    border: 1px solid red;
 
     font-size: 1.5em;
 }
@@ -28,7 +30,7 @@ body {
     padding: .5em;
     padding-top: .25em;
 
-    border: 2px solid transparent;
+    border: 2px solid rgba(0,0,0,0.05);
     border-radius: .25em;
 
     box-sizing: border-box;
