--- a/public/main.css
+++ b/public/main.css
@@ -141,3 +141,11 @@ body {
     height: 1.75em;
     margin-top: .2em;
 }
+
+#git {
+    color: var(--text-color);
+    text-decoration: none;
+}
+#git:hover {
+    color: white;
+}
